--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -54,7 +54,7 @@
         hoverBorderColor:`BYP`,
         inputColor:`PWinput`,
         cardPwImgURL:`${websitePath}/projectImages/Cover_BYP_AppB2B.png`,
-        cardPwTitle: `Streamlined Onboarding & Engagement: Mastering B2B SaaS Subscription Success`, 
+        cardPwTitle: `Simplified B2B Onboarding & Enhanced Engagement for Business Owners`, 
         cardPwDescription:`Enhancing the onboarding and subscription experience for B2B clients in the SaaS domain. Our focus was on demystifying and refining these critical processes to ensure a seamless and engaging transition for new users.` 
         }) %>
     </div>
@@ -64,7 +64,7 @@
         hoverBorderColor:`BYP`,
         inputColor:`PWinput`,
         cardPwImgURL:`${websitePath}/projectImages/Cover_BYP_AppB2B_Redesign.png`,
-        cardPwTitle: `BookYourPet Redefined: Powering Up the Pet Service Booking Revolution`, 
+        cardPwTitle: `The Redesign of Pet Booking App`, 
         cardPwDescription:`Revolutionized BookYourPet with a strategic platform redesign, elevating user engagement and streamlining operations. Our focused overhaul on essential features led to a 45% surge in user satisfaction, reshaping pet care services. Discover our journey towards a seamless pet service experience.` 
         }) %>
       <%- include(`${templatePath}/shared/block_cardnPassword`, {
