--- a/templates/shared/block_cardProjects.ejs
+++ b/templates/shared/block_cardProjects.ejs
@@ -26,7 +26,7 @@
           <div class="element">
             <div class="element">
               <h5>Password is required</h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>Streamlined Onboarding & Engagement: Mastering B2B SaaS Subscription Success
+              <h3 class="arrCard" data-aos="fade-up"><strong>Simplified B2B Onboarding & Enhanced Engagement for Business Owners
                 </strong></h3>
               <h4>enhancing the onboarding and subscription experience for B2B clients in the SaaS domain. Our focus was on demystifying and refining these critical processes to ensure a seamless and engaging transition for new users. 
               </h4>
