--- a/html/main.css
+++ b/html/main.css
@@ -2061,7 +2061,7 @@ a:link.textUnderline {
 }
 
 .textDecor.WS {
-    text-decoration-color: var(--WS-Blue);
+    text-decoration-color: var(--BYP-Teal400);
 }
 
 .textDecor.LASO {
