--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -20,7 +20,7 @@
     ShowIntroTitle2:false,
     ShowIntroTitle3:false,
     ShowIntroTitle4:false,
-    introTitle1: `Streamlining UX for Enhanced Business Impact: Simplifying Complex Interfaces for Optimal User Engagement`,
+    introTitle1: `I'm interested in streamlining UX for Enhanced Business Impact. I implifying Complex Interfaces for Optimal User Engagement`,
     divider1: false, 
     introTitle2: ``,
     divider2: false, 
