--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -18,7 +18,7 @@
     ShowIntroTitle3:false,
     ShowIntroTitle4:false,
 
-    introTitle1: `Versatile UX Innovator: Bridging Efficiency and Engagement in SaaS, Administrative Interfaces, and User-Driven Applications`,
+    introTitle1: `I'm a UX Designer focused on bridging efficiency and engagement in SaaS, administrative Interfaces, and user-Driven applications`,
     divider1: false, 
     introTitle2: ``,
     divider2: false, 
