--- a/templates/intro/index.ejs
+++ b/templates/intro/index.ejs
@@ -23,7 +23,7 @@
 
       <!--- slide 1 -->
 
-      <li class='item' style="background-image: url('/introImg/BYP_AppB2B_Redesign.png')">
+      <li class='item' style="background-image: url('BYP_AppB2B_Redesign.png')">
         <div class='content'>
           <h2 class='title'>The Redesign of Pet Booking App</h2>
           <p class='description'>From White Glove to Self-Service: Empowering Users to Take Control
@@ -31,7 +31,7 @@
           <a href="/"><button class="intro">View Project</button></a>
         </div>
       </li>
-      <li class='item' style="background-image: url('/introImg/BYP_AppB2B.png')">
+      <li class='item' style="background-image: url('BYP_AppB2B.png')">
         <div class='content'>
           <h2 class='title'>Simplified B2B Onboarding & Enhanced Engagement for Business Owners </h2>
           <p class='description'> Mastering B2B SaaS Subscription Success </p>
@@ -39,7 +39,7 @@
 
         </div>
       </li>
-      <li class='item' style="background-image: url('/introImg/LASO_AdminPanel.png')">
+      <li class='item' style="background-image: url('LASO_AdminPanel.png')">
         <div class='content'>
           <h2 class='title colorWhie'>LASO Admin Panel</h2>
           <p class='description colorWhie'>
@@ -48,7 +48,7 @@
           <a href="/"><button class="intro">View Project</button></a>
         </div>
       </li>
-      <li class='item' style="background-image: url('/introImg/LASO_RXZero.png')">
+      <li class='item' style="background-image: url('LASO_RXZero.png')">
         <div class='content'>
           <h2 class='title'>Shifting Focus</h2>
           <p class='description'>
@@ -57,7 +57,7 @@
           <a href="/"><button class="intro">View Project</button></a>
         </div>
       </li>
-      <li class='item' style="background-image: url('/introImg/LASO_CostCalculator.png')">
+      <li class='item' style="background-image: url('LASO_CostCalculator.png')">
         <div class='content'>
           <h2 class='title colorLASObule700'>RX Zero Savings Explorer</h2>
           <p class='description colorLASObule700'> Cost-benefit Calculator: a tool enables users to compare their current medication costs with the RX Zero subscription model</p>
