--- a/templates/shared/block_banner.ejs
+++ b/templates/shared/block_banner.ejs
@@ -19,6 +19,11 @@
   bannerSubTitle = ''; 
 } 
 %>
+<% if (typeof bannerButtonColor === '') { 
+  bannerButtonColor = ''; 
+} 
+%>
+
 
 <div class="<%= bannerBgColor %>">
 
@@ -32,6 +37,9 @@
       <h2 class="ProjectBannerInnerElement"><strong><%= bannerTitle %></strong> </h2>
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
 
+
+
+
       <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="button-35 <%= bannerButtonColor %>">Slide Deck</button></a>
     </div>
   </div>
@@ -44,7 +52,9 @@
       <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
       <h2><strong><%= bannerTitle %></strong> </h2>
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
+
       <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="button-35  <%= bannerButtonColor %>">Slide Deck</button></a>
+
       <div class="blankHXS"></div>
     </div>
   </div>
@@ -57,7 +67,9 @@
       <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
       <h2><strong><%= bannerTitle %></strong> </h2>
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
+
       <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="button-35  <%= bannerButtonColor %>">Slide Deck</button></a>
+
       <div class="blankHXS"></div>
     </div>
   </div>
