--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -54,8 +54,8 @@
         hoverBorderColor:`BYP`,
         inputColor:`PWinput`,
         cardPwImgURL:`${websitePath}/projectImages/Cover_BYP_AppB2B.png`,
-        cardPwTitle: `Simplified B2B Onboarding & Enhanced Engagement for Business Owners`, 
-        cardPwDescription:`Enhancing the onboarding and subscription experience for B2B clients in the SaaS domain. Our focus was on demystifying and refining these critical processes to ensure a seamless and engaging transition for new users.` 
+        cardPwTitle: `Mastering B2B SaaS Subscription Success`, 
+        cardPwDescription:`This case study delves into the strategic enhancements made to the onboarding process of a B2B SaaS platform, aimed at simplifying user experience and boosting subscription rates. It explores the challenges faced, the solutions implemented, and the significant impact these changes had on user satisfaction and conversion rates, ultimately driving subscription success in a competitive market.` 
         }) %>
     </div>
     <div class="Grid Grid--gutters Grid--cols-2">
