--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -93,7 +93,7 @@
             <div class="element">
               <h3><strong class="colorVW"> EXPERIENCE</strong></h3>
               <h5><strong>BookYourPet | UI/UX Designer </strong></h5>
-              <h6 class="textItalic">Oct. 2021 - Present, Contractor</h6>
+              <h6 class="textItalic">Oct. 2021 - Present, Full-time Contractor</h6>
 
               <ul>
                 <li class="listCircle">Spearheaded the enhancement of key web app functionalities, including appointment scheduling, team management, and payment processes, achieving a 10% increase in booking conversions and a 36% growth in completed appointments.</li>
